--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <title>contacts</title>
+        <link rel="stylesheet" href="css/style.css">
+
         <body>
             <h3>contact-</h3>
             <ul>
