--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <title>AYUSH'S WEBSITE</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
-
 <body>
     <table cellspacing="20">
         <tr>
             <td> <img src="IMG_2430-modified.png" alt="HERO" height="200" width="200"></td>
             <td>
                 <h1>AYUSH DEWANGAN</h1>
-                <p><em>i am self obsessed <strong>guy</strong></em></p>
+                <p><em>I am self obsessed <strong>guy</strong></em></p>
 
                 <p><em>I am a cinematographer and reel maker</em></p>
             </td>
@@ -34,7 +34,7 @@
     <hr>
     <h3>SOCIALS</h3>
     <p><strong><a href="https://instagram.com/mr.ayusz?igshid=NDk5N2NlZjQ=">instagram</a></strong></p>
-    <p><strong><a href="https://www.youtube.com/watch?v=Nchph3jb-bA&ab_channel=DIVYANSHU">youtube</a></strong></p>
+    <p><strong><a href="https://www.linkedin.com/in/ayush-dewangan-316429220">linkedin</a></strong></p>
     <hr>
     <a href="contact.html">contact me at</a>
     <br>
@@ -45,7 +45,7 @@
     <table>
         <thead>
             <tr>
-                <td>2003-2019</td>
+                <td>2007-2019</td>
                 <td>10th pass</td>
 
             </tr>
