--- a/input.html
+++ b/input.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>form</title>
+        <link rel="stylesheet" href="css/style.css">
         <body>
             <form action="mailto:21051886@kiit.ac.in" method="post" enctype="text/plain">
                 <label>NAME:</label>
